# tsa_neuroips

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  extract.py  main.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt  test_fix.py  test_main.py
.github/workflows/: ci-tests.yml
baselines/: __init__.py
baselines/ann_to_snn/: __init__.py  ann_to_snn_converter.py
baselines/eprop/: __init__.py  eprop_snn.py
configs/: ann_to_snn_config.yaml  eprop_config.yaml  stdp_config.yaml  surrogate_grad_config.yaml  tsa_config.yaml  ttfs_config.yaml
docs/: __init__.py  setup.md
experiments/: __init__.py  ablations.py  baseline_comparison.py  benchmarks.py  dataset_loaders.py  statistical_validation.py
hardware/: __init__.py  loihi2_deployment.py
models/: __init__.py  tst_v2.py
paper/: __init__.py  main.tex  references.bib
post_acceptance/: __init__.py
scripts/: __init__.py  generate_comparison_table.py  generate_plots.py  run_all_experiments.py  run_baseline_comparison.py  run_loihi_simulation.py  run_tsa_experiments.py
submission/: __init__.py  checklist.py  rebuttal_preparation.py
test_logs/: events.out.tfevents.1782752846.DESKTOP-ODLJRL6.19720.0  events.out.tfevents.1782753598.DESKTOP-ODLJRL6.26396.0  events.out.tfevents.1782904837.DESKTOP-ODLJRL6.19668.0
tests/: __init__.py  test_baselines.py  test_trainer.py  test_tsa.py
theory/: __init__.py  formulation.py  proofs.py
training/: __init__.py  trainer_v2.py
utils/: __init__.py  reproducibility.py  results_writer.py
(+10 files in other folders)
