[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsa_neuroips"
version = "0.1.0"
description = "Temporal Spiking Attention — NeurIPS 2027"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = false
no_implicit_optional = true
[[tool.mypy.overrides]]
module = ["spikingjelly.*", "tonic.*", "wandb.*", "nxsdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
